tests/snapshots/lexer__strings__empty.snap
---
source: tests/lexer.rs
expression: "lex(r#\"\"\"\"#)"
---
Ok(
    [
        Token {
            kind: StringLiteral(
                "",
            ),
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
