tests/snapshots/lexer__strings__escape_newline.snap
---
source: tests/lexer.rs
expression: "lex(r#\"\"hello\\nworld\"\"#)"
---
Ok(
    [
        Token {
            kind: StringLiteral(
                "hello\nworld",
            ),
            span: Span {
                start: 0,
                end: 14,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 14,
                end: 14,
            },
        },
    ],
)
