tests/snapshots/lexer__strings__escape_tab.snap
---
source: tests/lexer.rs
expression: "lex(r#\"\"hello\\tworld\"\"#)"
---
Ok(
    [
        Token {
            kind: StringLiteral(
                "hello\tworld",
            ),
            span: Span {
                start: 0,
                end: 14,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 14,
                end: 14,
            },
        },
    ],
)
